[package]
name = "main"
version = "0.1.0"
authors = ["Solleter <Solleter@outlook.com>"]
edition = "2018"

[dependencies]
r01_display = { path = "../r01_display"}
r02_testlist = { path = "../r02_testlist"}
r03_format = { path = "../r03_format"}
r04_datatype = { path = "../r04_datatype" }
r05_literal = { path = "../r05_literal" }
r06_tuple = { path = "../r06_tuple" }
r07_array_slice = { path = "../r07_array_slice" }
r08_struct = { path = "../r08_struct" }
r09_enum = { path = "../r09_enum" }
r10_enum_use = { path = "../r10_enum_use" }
r11_enum_cstyle = { path = "../r11_enum_cstyle" }
r12_testcase_linklist = { path = "../r12_testcase_linklist" }
r13_const = { path = "../r13_const" }
r14_variable_bind = { path = "../r14_variable_bind" }
r15_mut_variable = { path = "../r15_mut_variable" }
r16_scope_shadowing = { path = "../r16_scope_shadowing" }
r17_type_convert = { path = "../r17_type_convert" }
r18_literal_variable = { path = "../r18_literal_variable" }
r19_type_deduce = { path = "../r19_type_deduce" }
r20_alias = { path = "../r20_alias" }